# machsp

./: .gitignore  README.md
dev/: .old_hsp.zip.icloud
dev/example/: paint.hsp
example/qAudio/: formant.hsp  pulse.hsp  rect.hsp  rosenberg.hsp  sin-12equal.hsp  sin-two.hsp  triangle.hsp  whitenoise-loop.hsp
hse3_editor/hsed/: AppDelegate.m  Document.h  Info.plist  MyWindow.h  MyWindow.m  ViewController.h  hsc3.h  hsp3config.h  hspvar_core.h  label.h  localinfo.h  strnote.h  strnote.mm  supio_linux.h  supio_linux.mm  tagstack.h  token.h  token.mm
hse3_editor/hsedle.xcodeproj/: project.pbxproj
hsed/hsed/: .icon-hsed.pxm.icloud  AppDelegate.h  AppDelegate.m  Document.m  Info.plist  LineNumberRulerView.h  LineNumberRulerView.m  MyClipView.m  MyColorThemePopUpButton.h  MyColorThemePopUpButton.m  MyComboBox.m  MyFontSizePopUpButton.h  MyFontSizePopUpButton.m  MyHelpWebKitView.h  MyHelpWebKitView.m  MyHorizontalSplitView.h  MyHorizontalSplitView.m  MyLogTextView.h  MyLogTextView.m  MyScrollView.h  MyScrollView.m  MySplitViewDelegate.m  MyStatusBarLabel.h  MyStatusBarLabel.m  MyStatusBarView.h  MyStatusBarView.m  MySyntaxPopUpButton.h  MySyntaxPopUpButton.m  MyTextView.h  MyTextView.m  MyTopView.h  MyTopView.m  MyWebKitView.h  MyWebKitView.m  MyWindow.h  MyWindow.mm  NSTextViewExtension.h  NSTextViewExtension.m  ViewController.h  ViewController.m  (+56 more)
hsed/hsed.xcodeproj/: project.pbxproj
hsedle/: utility.h
hsedle/hsed/: AppDelegate.h  AppDelegate.m  Document.h  Document.m  Info.plist  MyTextView.h  MyTextView.m  MyWindow.h  MyWindow.m  MyWindow.mm  ViewController.h  ViewController.m  ahtmodel.h  ahtmodel.mm  ahtobj.h  ahtobj.mm  c_wrapper.h  c_wrapper.m  codegen.mm  comutil.h  comutil.mm  errormsg.h  errormsg.mm  hsc3.h  hsc3.mm  hsp3config.h  hsp3debug.h  hsp3struct.h  hspcmd.m  hspvar_core.h  label.h  label.mm  localinfo.h  localinfo.mm  main.m  membuf.h  membuf.mm  objc_utility_string.h  objc_utility_string.m  runCompiler.h  (+21 more)
hsedle/hsedle.xcodeproj/: project.pbxproj
hsedle_swift/hsedle_swift/: AppDelegate.swift  Document.swift  Info.plist  ViewController.swift
hsedle_swift/hsedle_swift.xcodeproj/: project.pbxproj
hsedle_swift/hsedle_swiftTests/: hsedle_swiftTests.swift
hsedle_swift/hsedle_swiftUITests/: hsedle_swiftUITests.swift  hsedle_swiftUITestsLaunchTests.swift
hsp-editor-lite/: CMakeLists.txt
hsp-editor-lite/resource/hsp.app/Contents/Resources/Base.lproj/Main.storyboardc/: Info.plist  MainMenu.nib  XfG-lQ-9wD-view-m2S-Jp-Qdl.nib
hsp-editor-lite/src/: main.cpp
hsp-editor-lite/src/compiler/: codegen.cpp  hsc3.cpp  hsc3.h  hsp3config.h  hsp3debug.h  hsp3struct.h  hsp_command.c  label.cpp  membuf.h  token.cpp  token.h
hsp-editor-lite/src/static/: static_global.cpp  static_global.h
hsp-editor-lite/src/util/: utility_errmsg.cpp  utility_errmsg.h  utility_stack.cpp  utility_stack.h  utility_string.h  utility_time.cpp  utility_time.h  vec.c  vec.h
hsp-engine/hsp/: MyAudio.m  MyMidi.h  MyMidi.m  MyView.h  MyWindow.m  SineWave.h  d3module.h  debug_message.h  dpmread.h  hsp.h  hsp.m  hsp3cl.m  hsp3config.h  hsp3gr.h  hsp3int.m  hspvar_core.mm  hspvar_double.c  hspvar_label.c  hspvar_str.h  hspvar_struct.c  main.m  (+13 more)
hsp-engine/hsp.xcodeproj/: project.pbxproj
hsp3/: CMakeLists.txt  call_extfunc64.asm  filepack.cpp  filepack.h  hsp3_64.sln  hsp3_64.vcxproj  hsp3_64.vcxproj.filters  hsp3code.cpp  hsp3int.cpp  hsp3utfcnv.cpp  vsclean.bat
hsp3/emscripten/: supio_emscripten.cpp
hsp3/ios/: supio_ios.cpp
hsp3/linux/: hsp3gr_linux.cpp  supio_linux.cpp
hsp3/ndk/: supio_ndk.cpp
hsp3/win32/: hsp3cl.sln  hsp3cl.vcproj  hsp3cl.vcxproj  hsp3cl.vcxproj.filters
hsp3/win32gui/: hsp3.sln  hsp3.vcproj  hsp3.vcxproj  hsp3gr_wingui.cpp  hspwnd_win.cpp  hspwnd_win.h
hsp3/win32guidll/: hsp3_vc2008.vcproj
hsp3dish/: essprite.cpp  essprite.h  hsp3gr_dish.cpp  hspwnd_dish.cpp  hspwnd_dish.h  hspwnd_obj.cpp  makefile.emscripten  texmes.cpp  vsclean.bat
hspcmp/: CMakeLists.txt  ahtmodel.cpp  ahtobj.cpp  makefile  makefile.emscripten
hspcmp/win32/: hspcmp.sln  hspcmp.vcxproj  hspcmp.vcxproj.filters
hspcmp/win32dll/: hspcmp.sln  hspcmp.vcxproj  hspcmp.vcxproj.filters
machsp-6f9ddb8170d0bbed931ba46a4c0836d9b3fb803d/: README.md
(+422 files in other folders)
